force-app/main/default/objects/Policy_Year__c/Policy_Year__c.object-meta.xml
<CustomObject>
    <label>Policy Year</label>
    <nameField>
        <label>Policy Year Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Years</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>