force-app/main/default/objects/Policy_Year__c/fields/Policy_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Policy_End_Date__c</fullName>
    <label>Policy End Date</label>
    <type>Date</type>
</CustomField>