force-app/main/default/objects/Policy_Year__c/fields/Policy_Submit_Rate__c.field-meta.xml
<CustomField>
    <fullName>Policy_Submit_Rate__c</fullName>
    <label>Policy Submit Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>