force-app/main/default/objects/Policy_Year__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Year</label>
    <referenceTo>Year__c</referenceTo>
    <relationshipName>Carrier_Policies</relationshipName>
    <type>Lookup</type>
</CustomField>